a lot of things added

--- a/index.html
+++ b/index.html
@@ -5,91 +5,156 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cat website v2.0</title>
     <link rel="stylesheet" href="main.css">
-    <link rel="icon" type="image/x-icon" href="Images/cat-paws.ico">
 </head>
 <body>
-    <header class="header">
+    <header id="top" class="header">
         <div>
-            <a href="https://github.com/YulyaKalashnikova/Simple-website" target="_blank">
+            <a href="https://github.com/YulyaKalashnikova/website-v2" target="_blank">
                 <img class="img-git" src="Images/github.png" alt="github profile">
             </a>
         </div>
         <nav class="navigation">
         <ul>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
+            <li>
+                <a href="#cat_info">Немного о коте</a>
+            </li>
+            <li>
+                <a href="#t_shirt">История создания футболки</a>
+            </li>
         </ul>
         </nav>
     </header>
 
-    <main class="main-content">
-        <section class="hero">
-            <h1>Добро пожаловать!</h1>
-            <p>Здесь вы можете узнать о моём коте побольше</p>
-        </section>
+    <section class="hero">
+        <h1>Добро пожаловать!</h1>
+        <p>Здесь вы можете узнать о моём коте побольше</p>
+    </section>
 
-        <section>
-            <div class="product">
-            <p>Описание продукта 2.</p>
-            </div>
-        </section>
-
-        <article>
-            <h3>Продукт</h3>
-            <p>sidhgousdhgoad</p>
-        </article>
-
-        <aside>
-            <h4>Новости и обновления</h4>
-            <p>dlifjsodoahodhoajhdohsojdghosjhdg</p>
-        </aside>
-        <!-- Другие секции -->
-    </main>
-
-    <div class="interlayer">
-        <div id="survey" class="info-container">
+    <div id="cat_info" class="interlayer">
+        <div id="survey" class="cell-container1">
             <!--Ячейка 1-->
             <div class="cell">
-                <img src="Images/B2RctB8li-w.jpg" alt="my Cat">
+                <img class="cell-img1" src="Images/photo_2024-06-17_15-37-16.jpg" alt="my Cat">
             </div>
             <!--Ячейка 2-->
             <div class="cell">
-                
-            </div>
-            <!--Ячейка 3-->
-            <div class="cell">
-
-            </div>
-            <!--Ячейка 4-->
-            <div class="cell">
-                <img src="Images/photo_2024-06-16_19-08-19.jpg" alt="my Cat">
+                Какой кот не любит полежать на ковре?
             </div>
         </div>
     </div>
 
-    <main class="main-content">
-        <section>
-            <div class="product">
-            <p>Описание продукта 2.</p>
+    <!--Карточки-->
+    <div class="container-card">
+        <div class="card">
+            <img src="Images/photo_2024-06-17_17-56-35.jpg" alt="Stepa">
+            <div class="image-row"> 
+              <p>Главный по мурлыканью</p> 
             </div>
-        </section>
+        </div>
+        <div class="card">
+            <img src="Images/20220109_033354.jpg" alt="Stepa">
+            <div class="image-row"> 
+              <p>Специалист по сладкому сну</p> 
+            </div>
+        </div>
+        <div class="card">
+            <img src="Images/B2RctB8li-w.jpg" alt="Stepa">
+            <div class="image-row">
+              <p>Любитель громко помяукать</p> 
+            </div>
+        </div>
+        <div class="card">
+            <img src="Images/photo_2024-06-16_19-08-19.jpg" alt="Stepa">
+            <div class="image-row"> 
+              <p>Инженер по мягким лапкам</p> 
+            </div>
+        </div>
+        <div class="card">
+            <img src="Images/Степан.jpg" alt="Stepa">
+            <div class="image-row">
+              <p>Первый по бегу в четыре утра</p> 
+            </div>
+        </div>
+    </div>
 
-        <article>
-            <h3>Продукт</h3>
-            <p>sidhgousdhgoad</p>
-        </article>
+    <div class="interlayer">
+        <div id="survey" class="cell-container1">
+            <!--Ячейка 1-->
+            <div class="cell">
+                Всё-таки нужно иногда переворачиваться
+            </div>
+            <!--Ячейка 2-->
+            <div class="cell">
+                <img class="cell-img1" src="Images/photo_2024-06-17_15-52-37.jpg" alt="my Cat">
+            </div>
+        </div>
+    </div>
 
-        <aside>
-            <h4>Новости и обновления</h4>
-            <p>dlifjsodoahodhoajhdohsojdghosjhdg</p>
-        </aside>
-        <!-- Другие секции -->
-    </main>
+    <h2 id="t_shirt" class="head2">
+        История одной футболки
+    </h2>
+
+    <div class="cell-container2">
+        <!--Ячейка 1-->
+        <div class="cell">
+            <img class="cell-img2" src="Images/me.jpg" alt="my Cat">
+        </div>
+        <!--Ячейка 2-->
+        <div class="cell">
+            <p>У меня была спортивная футболка Puma<br>c большим логотипом на груди</p>
+            <div style="color: rgb(166, 166, 166); font-size: 13px;">*фотографию лучше я не нашла</div>
+        </div>
+    </div>
+
+    <!--Тут будет стрелка-->
+    <div class="arrow-container">
+        <div>
+            <img class="arrow-img" src="Images/right-arrow-with-broken-line.png" alt="right arrow">
+        </div>
+    </div>
+
+    <div id="survey" class="cell-container2">
+        <!--Ячейка 1-->
+        <div class="cell">
+            <p>Однажды Стёпа лег таким образом.<br>Я быстро его сфотографировала</p>
+        </div>
+        <!--Ячейка 2-->
+        <div class="cell">
+            <img class="cell-img2" src="Images/puma (2).jpg" alt="my Cat">
+        </div>
+    </div>
+
+    <!--Тут будет стрелка-->
+    <div class="arrow-container">
+        <div>
+            <img class="arrow-img" src="Images/left-arrow-with-broken-lin.png" alt="left arrow">
+        </div>
+    </div>
+
+    <div id="survey" class="cell-container2">
+        <!--Ячейка 1-->
+        <div class="cell">
+            <img class="cell-img2" src="Images/puma3.jpg" alt="my Cat">
+        </div>
+        <!--Ячейка 2-->
+        <div class="cell">
+            <p>Я не сразу догодалась сделать такую футболку. Мне нравится результат<br></p>
+        </div>
+    </div>
 
     <footer class="footer">
-        <p>© 2024</p>
+        <div class="footer-container">
+            <div>
+                <p class="inc">© 2024 Cat, Inc.</p>
+            </div>
+            <div class="align">
+                <a href="#top" class="content2" style="position: relative">
+                    <button class="btn"> 
+                        Наверх
+                    </button>
+                </a>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
