a lot of things added

--- a/index.html
+++ b/index.html
@@ -14,27 +14,34 @@
             </a>
         </div>
         <nav class="navigation">
-        <ul>
-            <li>
-                <a href="#cat_info">Немного о коте</a>
-            </li>
-            <li>
-                <a href="#t_shirt">История создания футболки</a>
-            </li>
-        </ul>
+            <ul>
+                <li>
+                    <a href="#cat_info">Немного о коте</a>
+                </li>
+                <li>
+                    <a href="#t_shirt">История создания футболки</a>
+                </li>
+            </ul>
         </nav>
     </header>
 
-    <section class="hero">
+    <section class="welcome">
         <h1>Добро пожаловать!</h1>
         <p>Здесь вы можете узнать о моём коте побольше</p>
     </section>
 
-    <div id="cat_info" class="interlayer">
+    <div class="site-info">
+        <p>Чтобы немного обучиться HTML и CSS я решила сверстать сайт. Он получился небольшим.<br> 
+            С темой долго думать не пришлось. Сайт про моего кота Стёпу =^•ﻌ•^=
+        </p> 
+    </div>
+
+    <!--Серая прослойка-->
+    <div id="cat_info" class="gray-interlayer">
         <div id="survey" class="cell-container1">
             <!--Ячейка 1-->
             <div class="cell">
-                <img class="cell-img1" src="Images/photo_2024-06-17_15-37-16.jpg" alt="my Cat">
+                <img class="cell-img-interlayer" src="Images/photo_2024-06-17_15-37-16.jpg" alt="my Cat">
             </div>
             <!--Ячейка 2-->
             <div class="cell">
@@ -77,7 +84,8 @@
         </div>
     </div>
 
-    <div class="interlayer">
+    <!--Серая прослойка-->
+    <div class="gray-interlayer">
         <div id="survey" class="cell-container1">
             <!--Ячейка 1-->
             <div class="cell">
@@ -85,7 +93,7 @@
             </div>
             <!--Ячейка 2-->
             <div class="cell">
-                <img class="cell-img1" src="Images/photo_2024-06-17_15-52-37.jpg" alt="my Cat">
+                <img class="cell-img-interlayer" src="Images/photo_2024-06-17_15-52-37.jpg" alt="my Cat">
             </div>
         </div>
     </div>
@@ -93,7 +101,6 @@
     <h2 id="t_shirt" class="head2">
         История одной футболки
     </h2>
-
     <div class="cell-container2">
         <!--Ячейка 1-->
         <div class="cell">
@@ -105,14 +112,12 @@
             <div style="color: rgb(166, 166, 166); font-size: 13px;">*фотографию лучше я не нашла</div>
         </div>
     </div>
-
     <!--Тут будет стрелка-->
     <div class="arrow-container">
         <div>
             <img class="arrow-img" src="Images/right-arrow-with-broken-line.png" alt="right arrow">
         </div>
     </div>
-
     <div id="survey" class="cell-container2">
         <!--Ячейка 1-->
         <div class="cell">
@@ -123,14 +128,12 @@
             <img class="cell-img2" src="Images/puma (2).jpg" alt="my Cat">
         </div>
     </div>
-
     <!--Тут будет стрелка-->
     <div class="arrow-container">
         <div>
             <img class="arrow-img" src="Images/left-arrow-with-broken-lin.png" alt="left arrow">
         </div>
     </div>
-
     <div id="survey" class="cell-container2">
         <!--Ячейка 1-->
         <div class="cell">
